fix encoding issue