@@ -23,6 +23,7 @@ import javax.annotation.PostConstruct;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.util.regex.Pattern;
 
@@ -74,10 +75,7 @@ public class FunctionalTestUtils {
     public String getJsonFromFile(String fileName) {
         try {
             File file = ResourceUtils.getFile(this.getClass().getResource("/json/" + fileName));
-            String fileContent = new String(Files.readAllBytes(file.toPath()));
-            // this means it was encoded UTF-8 but decoded by ANSI/Windows-1252
-            fileContent = fileContent.replaceAll(Pattern.quote("â€™"), "’");
-            fileContent = fileContent.replaceAll(Pattern.quote("Â£"), "£");
+            String fileContent = new String(Files.readString(file.toPath(), StandardCharsets.UTF_8));
             return fileContent;
         } catch (IOException e) {
             e.printStackTrace();
